re PR libstdc++/51626 ([C++0x] can't use C++98 allocators with -std=c++0x)

PR libstdc++/51626
	* include/bits/stl_uninitialized.h (_Construct_default_a_impl): Define
	overloaded functions to conditionally use allocator::construct.
	(_Construct_default_a): Define to dispatch to appropriate
	_Construct_default_a_impl overload.
	(__uninitialized_default_a, __uninitialized_default_n_a): Use
	_Construct_default_a.
	* testsuite/20_util/allocator/51626.cc: New.

From-SVN: r182600